# othello

./: .gitignore  Cargo.toml  init_moves.txt
src/: bitboard.rs  game.rs  lib.rs  main.rs  mcts.rs  mctsnew.rs  server.rs
test/: test.py
training/: MCTS.py  model.py  server.py
